--- a/Base.html
+++ b/Base.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <title></title>
-        <script src="practice.js">
-
-        </script>
+        <!--<script src="practice.js"></script>-->
+        <!--<script src="scope.js"></script>-->
+        <script src="Object.js"></script>
     </head>
     <body>
 
