--- a/Base.html
+++ b/Base.html
@@ -4,7 +4,8 @@
         <title></title>
         <!--<script src="practice.js"></script>-->
         <!--<script src="scope.js"></script>-->
-        <script src="Object.js"></script>
+        <!--<script src="Object.js"></script>-->
+        <script src="array.js"></script>
     </head>
     <body>
 
