--- a/Base.html
+++ b/Base.html
@@ -5,7 +5,9 @@
         <!--<script src="practice.js"></script>-->
         <!--<script src="scope.js"></script>-->
         <!--<script src="Object.js"></script>-->
-        <script src="array.js"></script>
+        <!--<script src="array.js"></script>-->
+        <!--<script src="function.js"></script>-->
+        <script src="classAndModule.js"></script>
     </head>
     <body>
 
